// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchResultsLayout renders basic header styles properly 1`] = `
<head>
  <style
    data-styled="active"
    data-styled-version="6.1.1"
  >
    .fSIIQD{color:#C000FE!important;}
    .iEGEJu{background-color:#4a402b;}
    .iEGEJu .usa-nav__primary,.iEGEJu .usa-nav__secondary-links{font-family:"Georgia","Cambria","Times New Roman","Times",serif;}
    .iEGEJu a.usa-nav__link{color:#594973;}
    .iEGEJu .usa-nav__secondary-item&gt;a{color:#c8155d;}
    .iEGEJu button.usa-menu-btn{background-color:#cfcd03;}
    .iEGEJu button.usa-menu-btn:hover{background-color:#9d9b02;}
    .fLKlZC .usa-banner__header,.fLKlZC .usa-banner__button-text{background-color:#643617;color:#dacb1b;}
    .fLKlZC .usa-banner__button::after,.fLKlZC .usa-banner__button[aria-expanded=true]:hover::after{background-color:#dacb1b;}
    .eaGpdP li.usa-nav__primary-item:not(li.usa-nav__submenu-item)&gt;a,.eaGpdP .usa-nav__primary&gt;.usa-nav__primary-item button[aria-expanded=false]{color:#aea9f7!important;}
    .eaGpdP .usa-current::after,.eaGpdP .usa-nav__primary&gt;.usa-nav__primary-item button[aria-expanded=true]{background-color:#aea9f7!important;}
    .eaGpdP .vertical-wrapper .usa-nav__submenu{background-color:#aea9f7!important;}
    .ckSPLK{font-family:"Helvetica Neue","Helvetica","Roboto","Arial",sans-serif;}
    .ckSPLK .result-title-link&gt;.result-title-label{color:#33f0aa!important;}
    .ckSPLK .result-title-link:visited&gt;.result-title-label{color:#4a97ad!important;}
    .ckSPLK .result-desc&gt;p{color:#2bd4c7!important;}
    .ckSPLK .result-url-text{color:#475830!important;}
    .eKmfZT{font-family:"Helvetica Neue","Helvetica","Roboto","Arial",sans-serif;background-color:#5fcfc5;}
    .eKmfZT .usa-footer__return-to-top&gt;a,.eKmfZT a.usa-footer__primary-link{color:#46f966;}
    .hsppyX{background-color:#be1c21;font-family:"Public Sans Web"!important;}
    .hsppyX .usa-identifier__container,.hsppyX .usa-identifier__container&gt;a,.hsppyX .usa-identifier__identity-disclaimer,.hsppyX .usa-identifier__identity-disclaimer&gt;a{color:#f48a4c;}
    .hsppyX .usa-identifier__required-links-item&gt;a,.hsppyX .usa-identifier__identity-domain{color:#5d5a6f;}
    .serp-result-wrapper{background-color:#761816;}
    .usa-button{background-color:#cfcd03;}
    .usa-button:hover{background-color:#9d9b02;}
  </style>
</head>
`;

exports[`SearchResultsLayout renders extended header styles properly 1`] = `
@media (max-width: 63.99em) {

}

<head>
  <style
    data-styled="active"
    data-styled-version="6.1.1"
  >
    .fSIIQD{color:#C000FE!important;}
    .frwUCo{background-color:#4a402b;}
    .frwUCo .usa-nav__primary a{font-family:"Public Sans Web"!important;font-weight:bold!important;}
    .frwUCo .usa-nav__secondary{font-family:"Georgia","Cambria","Times New Roman","Times",serif;}
    .frwUCo .usa-nav{background-color:#83df0a;}
    .frwUCo a.usa-nav__link{color:#594973!important;}
    .frwUCo .usa-nav__secondary-item&gt;a{color:#c8155d;}
    @media (max-width: 63.99em){.frwUCo .usa-nav__secondary-item&gt;a{color:#594973;}}
    .frwUCo button.usa-menu-btn{background-color:#cfcd03;}
    .frwUCo button.usa-menu-btn:hover{background-color:#9d9b02;}
    .fLKlZC .usa-banner__header,.fLKlZC .usa-banner__button-text{background-color:#643617;color:#dacb1b;}
    .fLKlZC .usa-banner__button::after,.fLKlZC .usa-banner__button[aria-expanded=true]:hover::after{background-color:#dacb1b;}
    .eaGpdP li.usa-nav__primary-item:not(li.usa-nav__submenu-item)&gt;a,.eaGpdP .usa-nav__primary&gt;.usa-nav__primary-item button[aria-expanded=false]{color:#aea9f7!important;}
    .eaGpdP .usa-current::after,.eaGpdP .usa-nav__primary&gt;.usa-nav__primary-item button[aria-expanded=true]{background-color:#aea9f7!important;}
    .eaGpdP .vertical-wrapper .usa-nav__submenu{background-color:#aea9f7!important;}
    .ckSPLK{font-family:"Helvetica Neue","Helvetica","Roboto","Arial",sans-serif;}
    .ckSPLK .result-title-link&gt;.result-title-label{color:#33f0aa!important;}
    .ckSPLK .result-title-link:visited&gt;.result-title-label{color:#4a97ad!important;}
    .ckSPLK .result-desc&gt;p{color:#2bd4c7!important;}
    .ckSPLK .result-url-text{color:#475830!important;}
    .eKmfZT{font-family:"Helvetica Neue","Helvetica","Roboto","Arial",sans-serif;background-color:#5fcfc5;}
    .eKmfZT .usa-footer__return-to-top&gt;a,.eKmfZT a.usa-footer__primary-link{color:#46f966;}
    .hsppyX{background-color:#be1c21;font-family:"Public Sans Web"!important;}
    .hsppyX .usa-identifier__container,.hsppyX .usa-identifier__container&gt;a,.hsppyX .usa-identifier__identity-disclaimer,.hsppyX .usa-identifier__identity-disclaimer&gt;a{color:#f48a4c;}
    .hsppyX .usa-identifier__required-links-item&gt;a,.hsppyX .usa-identifier__identity-domain{color:#5d5a6f;}
    .serp-result-wrapper{background-color:#761816;}
    .usa-button{background-color:#cfcd03;}
    .usa-button:hover{background-color:#9d9b02;}
  </style>
</head>
`;

exports[`SearchResultsLayout renders search with results styles properly 1`] = `
@media (max-width: 63.99em) {

}

<head>
  <style
    data-styled="active"
    data-styled-version="6.1.1"
  >
    .fSIIQD{color:#C000FE!important;}
    .frwUCo{background-color:#4a402b;}
    .frwUCo .usa-nav__primary a{font-family:"Public Sans Web"!important;font-weight:bold!important;}
    .frwUCo .usa-nav__secondary{font-family:"Georgia","Cambria","Times New Roman","Times",serif;}
    .frwUCo .usa-nav{background-color:#83df0a;}
    .frwUCo a.usa-nav__link{color:#594973!important;}
    .frwUCo .usa-nav__secondary-item&gt;a{color:#c8155d;}
    @media (max-width: 63.99em){.frwUCo .usa-nav__secondary-item&gt;a{color:#594973;}}
    .frwUCo button.usa-menu-btn{background-color:#cfcd03;}
    .frwUCo button.usa-menu-btn:hover{background-color:#9d9b02;}
    .fLKlZC .usa-banner__header,.fLKlZC .usa-banner__button-text{background-color:#643617;color:#dacb1b;}
    .fLKlZC .usa-banner__button::after,.fLKlZC .usa-banner__button[aria-expanded=true]:hover::after{background-color:#dacb1b;}
    .eaGpdP li.usa-nav__primary-item:not(li.usa-nav__submenu-item)&gt;a,.eaGpdP .usa-nav__primary&gt;.usa-nav__primary-item button[aria-expanded=false]{color:#aea9f7!important;}
    .eaGpdP .usa-current::after,.eaGpdP .usa-nav__primary&gt;.usa-nav__primary-item button[aria-expanded=true]{background-color:#aea9f7!important;}
    .eaGpdP .vertical-wrapper .usa-nav__submenu{background-color:#aea9f7!important;}
    .ckSPLK{font-family:"Helvetica Neue","Helvetica","Roboto","Arial",sans-serif;}
    .ckSPLK .result-title-link&gt;.result-title-label{color:#33f0aa!important;}
    .ckSPLK .result-title-link:visited&gt;.result-title-label{color:#4a97ad!important;}
    .ckSPLK .result-desc&gt;p{color:#2bd4c7!important;}
    .ckSPLK .result-url-text{color:#475830!important;}
    .eKmfZT{font-family:"Helvetica Neue","Helvetica","Roboto","Arial",sans-serif;background-color:#5fcfc5;}
    .eKmfZT .usa-footer__return-to-top&gt;a,.eKmfZT a.usa-footer__primary-link{color:#46f966;}
    .hsppyX{background-color:#be1c21;font-family:"Public Sans Web"!important;}
    .hsppyX .usa-identifier__container,.hsppyX .usa-identifier__container&gt;a,.hsppyX .usa-identifier__identity-disclaimer,.hsppyX .usa-identifier__identity-disclaimer&gt;a{color:#f48a4c;}
    .hsppyX .usa-identifier__required-links-item&gt;a,.hsppyX .usa-identifier__identity-domain{color:#5d5a6f;}
    .serp-result-wrapper{background-color:#761816;}
    .usa-button{background-color:#cfcd03;}
    .usa-button:hover{background-color:#9d9b02;}
  </style>
</head>
`;
